--- a/cities.html
+++ b/cities.html
@@ -22,6 +22,7 @@
   <hr/>
 
   <ol>
+    <li>Toronto (4,000,000)</li>
     <li>Tehran (8,694,000)</li>
     <li>Bucharest (3,800,000)</li>
     <li>Shanghai (17,836,133)</li>
