--- a/cities.html
+++ b/cities.html
@@ -30,6 +30,7 @@
     <li>Mumbai   (12,478,447)</li>
     <li>Las Vegas (634,773)</li>
     <li>Brasov (375,000)</li>
+    <li>Cartagena (914,552)</li>
   </ol>
 
 </body>
